--- a/index.html
+++ b/index.html
@@ -30,7 +30,24 @@
             <div id="linea"></div>
         </nav>
     </header>
+
+    <header id="header2">
+        <span class="icon-menu" id="icon-menu2"></span>
+        <nav id="nav2">
+            <ul>
+                <li><a href="">INICIO</a></li>
+                <li class="lineaSeparadora"></li>
+                <li><a href="" id="turnos2">TURNOS</a></li>
+                <li class="lineaSeparadora"></li>
+                <li><a href="">FOTOS</a></li>
+                <li class="lineaSeparadora"></li>
+                <li><a href="">SOBRE<br>LA BARBERIA</a></li>
+            </ul>
+        </nav>
+    </header>
   
+
+    
     <div id="divLogo">
         <img src="imagenes/logo.png" alt="logo">
     </div>
