--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     </header>
 
     <header id="header2">
-        <span class="icon-menu" id="icon-menu2"></span>
+        <span class="icon-circle-right" id="icon-circle-right"></span>
+        <span class="icon-circle-left" id="icon-circle-left"></span>
         <nav id="nav2">
             <ul>
                 <li><a href="">INICIO</a></li>
@@ -56,7 +57,7 @@
         <h1>BARBERIA CLAUDIO RENAUDO</h1>
     </div>
     <div id="desde">
-    <h3>DESDE 1991</h3>
+    <h3>BROWN 2178</h3>
     </div>
   </div>
 </div>
