--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 <div id="parteDeAbajo">
     <div id="nombre">
-        <h1>BARBERIA CLAUDIO RENAUDO</h1>
+        <h1 id="nombreH1">BARBERIA CLAUDIO RENAUDO</h1>
     </div>
     <div id="desde">
     <h3>BROWN 2178</h3>
